--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,36 @@
-[init]
-	defaultBranch = main
 [user]
 	name = Martin Matyášek
 	email = martin.matyasek@gmail.com
+[github]
+	user = matyama
+[init]
+	defaultBranch = main
+[core]
+	autocrlf = input
+	safecrlf = true
+[merge]
+	tool = nvim -d
+[pull]
+	ff = only
+[push]
+	default = simple
+[diff]
+	algorithm = patience
+	compactionHeuristic = true
+[alias]
+	c = commit
+	s = status
+	st = status
+	lg = log --all --decorate --oneline --graph
+	last = log -1 HEAD
+	cl = log -p -- ':(exclude)Cargo.lock'
+	pl = log -p -- ':(exclude)poetry.lock'
+	f = push --force-with-lease
+	# https://stackoverflow.com/a/11688523/472927
+	ss = "!f() { git stash show stash^{/$*} -p; }; f"
+	sa = "!f() { git stash apply stash^{/$*}; }; f"
+	sl = stash list
+[ui "color"]
+	ui = always
+[color]
+	ui = true
