Add more aliases and env configs

--- a/.gitconfig
+++ b/.gitconfig
@@ -30,6 +30,7 @@
 	ss = "!f() { git stash show stash^{/$*} -p; }; f"
 	sa = "!f() { git stash apply stash^{/$*}; }; f"
 	sl = stash list
+	ah = "!f() { git stash && git pull --rebase && git stash pop; }; f"
 [ui "color"]
 	ui = always
 [color]
