Update p10k and guake configs for custom font

--- a/guake.conf
+++ b/guake.conf
@@ -19,7 +19,7 @@ scroll-keystroke=true
 scroll-output=false
 start-at-login=true
 start-fullscreen=true
-use-default-font=true
+use-default-font=false
 use-popup=false
 use-scrollbar=false
 use-trayicon=false
@@ -71,3 +71,4 @@ transparency=100
 allow-bold=true
 palette='#252529292A2A:#F2F248484040:#626296965555:#B6B688880000:#20207575C7C7:#79797F7FD4D4:#151596968D8D:#D2D2D8D8D9D9:#252529292A2A:#F2F248484040:#626296965555:#B6B688880000:#20207575C7C7:#79797F7FD4D4:#151596968D8D:#D2D2D8D8D9D9:#D2D2D8D8D9D9:#3D3D3F3F4141'
 palette-name='Solarized Darcula'
+style='MesloLGS NF 10'
