Update font size in Guake terminal

--- a/guake.conf
+++ b/guake.conf
@@ -69,6 +69,7 @@ transparency=100
 
 [style/font]
 allow-bold=true
+bold-is-bright=false
 palette='#252529292A2A:#F2F248484040:#626296965555:#B6B688880000:#20207575C7C7:#79797F7FD4D4:#151596968D8D:#D2D2D8D8D9D9:#252529292A2A:#F2F248484040:#626296965555:#B6B688880000:#20207575C7C7:#79797F7FD4D4:#151596968D8D:#D2D2D8D8D9D9:#D2D2D8D8D9D9:#3D3D3F3F4141'
 palette-name='Solarized Darcula'
-style='MesloLGS NF 10'
+style='MesloLGS NF 14'
