--- a/.config/coc/coc-settings.json
+++ b/.config/coc/coc-settings.json
@@ -6,5 +6,6 @@
       "rootPatterns": ["*.cabal", "stack.yaml", "cabal.project", "package.yaml", "hie.yaml"],
       "filetypes": ["haskell", "lhaskell"]
     }
-  }
+  },
+  "rust-analyzer.cargo.allFeatures": true
 }
