Change Alacritty toggle to Guake's F1

--- a/guake.conf
+++ b/guake.conf
@@ -32,7 +32,7 @@ window-tabbar=false
 window-width=100
 
 [keybindings/global]
-show-hide='F1'
+show-hide='<Alt>F1'
 
 [keybindings/local]
 close-tab='disabled'
@@ -65,11 +65,13 @@ switch-tab9='<Primary>9'
 toggle-hide-on-lose-focus='disabled'
 
 [style/background]
+color='#3B3B32322828'
 transparency=100
 
 [style/font]
 allow-bold=true
 bold-is-bright=false
+color='#d0d0c8c8c6c6'
 palette='#252529292A2A:#F2F248484040:#626296965555:#B6B688880000:#20207575C7C7:#79797F7FD4D4:#151596968D8D:#D2D2D8D8D9D9:#252529292A2A:#F2F248484040:#626296965555:#B6B688880000:#20207575C7C7:#79797F7FD4D4:#151596968D8D:#D2D2D8D8D9D9:#D2D2D8D8D9D9:#3D3D3F3F4141'
 palette-name='Solarized Darcula'
 style='MesloLGS NF 14'
