Configure Base16 colors for vim and shell
  * Adds `make base16-shell` target that clones and tests *base16-shell*
  * Adds a `base16` hook to `.zshrc` and sets `BASE16_SHELL_HOME` in
  `.pam_environment`
  * Adds `base16-vim` plugin and configures vim to use the
  `gruvbox-dark-hard` theme
  * Fixes issue with code documentation pop-ups where some keywords had
    the same color as the pop-up background
  * Adds relevant sections to README

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -41,7 +41,8 @@ font:
   size: 14
 
 # Base16 Gruvbox dark, hard 256 - alacritty color config
-# Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
+#  - https://github.com/aarowill/base16-alacritty
+#  - Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
 colors:
   # Default colors
   primary:
