Add `initializationOptions` for HLS wrapper
 - Turns on hlint by default with max 10 problems showing and completion
   snippets enabled
 - Adds `hs` and `lhs` to filetypes just to be sure

--- a/.config/coc/coc-settings.json
+++ b/.config/coc/coc-settings.json
@@ -4,7 +4,14 @@
       "command": "haskell-language-server-wrapper",
       "args": ["--lsp"],
       "rootPatterns": ["*.cabal", "stack.yaml", "cabal.project", "package.yaml", "hie.yaml"],
-      "filetypes": ["haskell", "lhaskell"]
+      "filetypes": ["hs", "lhs" , "haskell", "lhaskell"],
+      "initializationOptions": {
+        "languageServerHaskell": {
+          "hlintOn": true,
+          "maxNumberOfProblems": 10,
+          "completionSnippetsOn": true
+        }
+      }
     }
   },
   "rust-analyzer.cargo.allFeatures": true,
