Configure `git-delta` and change `BAT_THEME`
 - Adds configuration enabling `delta` in `$XDG_CONFIG_HOME/git/config`,
   see [delta docs](https://dandavison.github.io/delta/)
 - Changes `BAT_THEME` to `base16-256` which according to the docs
   should work with `base16-shell` (and indeed visually looks better)

Migration can be done by simply reloading the shell, so that the updated
bat theme is picked up.

--- a/.config/git/config
+++ b/.config/git/config
@@ -8,15 +8,35 @@
 [core]
 	autocrlf = input
 	safecrlf = true
+	pager = delta
+[interactive]
+	diffFilter = delta --diff-so-fancy
+[delta]
+	features = zebra-dark
+	line-numbers = true
+	side-by-side = true
+	# use n and N to move between diff sections
+	navigate = true
+	# set to true if you're in a terminal w/ a light background color
+	light = false
+	# link GitHub/GitLab/Bitbucket in git blame
+	#  - FIXME: does not display correctly (possibly issue with Alacritty)
+	#  - https://github.com/alacritty/alacritty/issues/922
+	#hyperlinks = true
+[add.interactive]
+	# required for git 2.37.0
+	useBuiltin = false 
 [merge]
 	tool = nvim -d
+	conflictStyle = diff3
 [pull]
 	ff = only
 [push]
 	default = simple
 [diff]
 	algorithm = patience
-	compactionHeuristic = true
+	indentHeuristic = true
+	colorMoved = default
 [alias]
 	c = commit
 	s = status
