Update Alacritty config for version 0.11.0

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -9,7 +9,7 @@ window:
 
   # GTK theme variant
   #  - dark | light | None (default theme variant)
-  gtk_theme_variant: None
+  decorations_theme_variant: None
 
 scrolling:
   # Maximum number of lines in the scrollback buffer ('0' means no scrolling).
