Add `forgit`, an interactive git+fzf
This commit:
 - Adds installation of `forgit` to Makefile (also works for updates)
 - Disables side-by-side view in git diff (resp. git-delta config)
   because it does not display well in the interactive view due to line
   wrapping and generally small preview window
 - Updates `.zshrc` plugin section

--- a/.config/git/config
+++ b/.config/git/config
@@ -14,7 +14,7 @@
 [delta]
 	features = zebra-dark
 	line-numbers = true
-	side-by-side = true
+	#side-by-side = true
 	# use n and N to move between diff sections
 	navigate = true
 	# set to true if you're in a terminal w/ a light background color
