--- a/.config/git/config
+++ b/.config/git/config
@@ -60,3 +60,8 @@
 	ui = always
 [color]
 	ui = true
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
