Init pre-commit in custom `init.templateDir`
This commit adds two git-related changes:
 1. Configures custom location of `init.templateDir` in the global git
    config
 2. After installation, setup `pre-commit` with the above template dir

Note that the latter configuration makes pre-commit enabled git
repositories automatically install pre-commit hooks after cloning.

--- a/.config/git/config
+++ b/.config/git/config
@@ -5,6 +5,7 @@
 	user = matyama
 [init]
 	defaultBranch = main
+	templateDir = ~/.local/share/git-core/templates
 [core]
 	autocrlf = input
 	safecrlf = true
