Install `mpv` and use it to play podcasts
This commit adds new `mpv` dependency for `newsboat` and makes it the
default player to play podcasts in `podboat`.

--- a/.config/newsboat/config
+++ b/.config/newsboat/config
@@ -5,7 +5,7 @@ display-article-progress yes
 
 podcast-auto-enqueue yes
 delete-played-files yes
-# TODO: https://newsboat.org/releases/2.35/docs/newsboat.html#podboat-player
+player "mpv --no-video"
 
 download-path "~/.cache/newsboat/podcasts/%n"
 save-path "~/.cache/newsboat/articles"
