Disable podcast auto-enqueue
So far, this option didn't quite work out for me. It's pretty annoying
when, after adding a new source, podboad (with current config) starts
downloading billion podcast episodes.

--- a/.config/newsboat/config
+++ b/.config/newsboat/config
@@ -3,7 +3,7 @@
 auto-reload yes
 display-article-progress yes
 
-podcast-auto-enqueue yes
+# podcast-auto-enqueue yes
 delete-played-files yes
 player "mpv --no-video"
 podlist-format "%4i [%5p %%] %-12S %F"
