Add `pre-commit` and fix reported issues

--- a/.local/share/stack/config.yaml
+++ b/.local/share/stack/config.yaml
@@ -1,3 +1,4 @@
+---
 # Cross-project configurations for "stack".
 # See https://docs.haskellstack.org/en/stable/yaml_configuration/
 
@@ -14,4 +15,5 @@ templates:
 # Stack colors set to "Solarized Dark"
 # See https://docs.haskellstack.org/en/stable/yaml_configuration/#stack-colors
 color: auto
+# yamllint disable-line rule:line-length
 stack-colors: error=31:good=32:shell=35:dir=34:recommendation=32:target=95:module=35:package-component=95:secondary=92:highlight=32
