Add `.editorconfig` and format Lua code
This commit adds a `.editorconfig` file and formats all Lua Nvim config
files. Note that no semantic changes have been made, just formatting.

Also this ensures that future commits follow proper formatting by adding
checkers to pre-commit.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,17 @@ repos:
         args: ["--fix=lf"]
       - id: trailing-whitespace
 
+  - repo: https://github.com/JohnnyMorganz/StyLua
+    rev: v0.20.0
+    hooks:
+      - id: stylua-system
+
+  - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
+    rev: 2.7.3
+    hooks:
+      - id: editorconfig-checker
+        alias: ec
+
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.23.0
     hooks:
