Add `tinted-alacritty` for Alacritty's theme
This commit replaces custom color config for Alacritty with one of the
themes maintained in `tinted-alacritty`.

The theme is the same as before, but is now symlinked from the cloned
`tinted-alacritty` repository as `colors.toml`. So in order to apply
this patch, run `make alacritty`.

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,6 @@
 # https://alacritty.org/config-alacritty.html
 
-import = ["~/.config/alacritty/base16-gruvbox-dark-hard.toml"]
+import = ["~/.config/alacritty/colors.toml"]
 
 live_config_reload = true
 
