Rename and update Base16 tools
The base16-project has been renamed to tinted-theming and so have been
all the sub-projects/tools. This commit reflects these changes.

Changes made here include:
 - Renames `base16-*` repos to `tinted-*` (except for the environment
   variables - for compatibility reasons)
 - Moves all sub-projects under `$XDG_CONFIG_HOME/tinted-theming/`
   (former `base16-project`) directory (this seems to be the default
   structure advocated by the docs)
 - Updates Makefile recipes to reflect these changes and makes them to
   pull new changes instead of failing if a particular tool has already
   been cloned
 - Uses terminal colors (i.e., tinted-shell theme) in git config for the
   delta pager
 - Updates README

--- a/.config/byobu/.tmux.conf
+++ b/.config/byobu/.tmux.conf
@@ -3,3 +3,7 @@
 # Propagate focus events to make (Neo)Vim autoread working inside tmux
 # See: https://vi.stackexchange.com/questions/444/how-do-i-reload-the-current-file
 set -g focus-events on
+
+# Enables ANSI pass through
+# See: https://github.com/tinted-theming/tinted-shell/blob/main/USAGE.md#tmux
+set -g allow-passthrough on
