Update for Ubuntu 24.04.1 (LTS)
This commit contains updates to several Makefile targets and
configuration files stored in this repository that were found
problematic (or otherwise outdated) during upgrade to Ubuntu 24.04.1.

Some notable changes include:
 - Ensuring all XDG environment variables are set independently of the
   shell and also in the Makefile
 - `make zsh` has been refactored and can now be invoked to update
   zsh/omz as well
 - `pipx` is installed via apt and `poetry` is now installed via pipx
 - `docker-compose` installation has been removed since it's now a
   docker sub-command
 - Haskell formatter was changed to `fourmolu`
 - Newsboat is now installed from an old deb package since the snap
   install does not work
 - There are new settings and keymap config files for Zed
 - Gruvbox theme files for `bat` have been removed, since the current
   config uses `BAT_THEME=base16-256`
 - There are few new shell aliases
 - There is a new section in the README about cleaning up dot files in
   `$HOME`

--- a/.config/environment.d/00-default.conf
+++ b/.config/environment.d/00-default.conf
@@ -3,5 +3,19 @@
 #
 # Note: Changes here will only apply consistently _after_ new session login.
 
+# Ensure that assumed XDG variables exist
+#  - https://wiki.archlinux.org/title/XDG_Base_Directory
+XDG_CONFIG_HOME=${XDG_CONFIG_HOME:-$HOME/.config}
+XDG_CACHE_HOME=${XDG_CACHE_HOME:-$HOME/.cache}
+XDG_DATA_HOME=${XDG_DATA_HOME:-$HOME/.local/share}
+
+# XDG specification does not define this variable but it is mentioned/assumed
+# by some apps/libs (e.g. `ghcup`) so it might be useful to export it anyway.
+#  - https://www.haskell.org/ghcup/guide/#xdg-support
+XDG_BIN_HOME=${XDG_BIN_HOME:-$HOME/.local/bin}
+
+# This variable is not set by default but is defined in the XDG specification.
+XDG_STATE_HOME=${XDG_STATE_HOME:-$HOME/.local/state}
+
 # Point `ZDOTDIR` to custom configs under `XDG_CONFIG_HOME` before shell login
 ZDOTDIR=${XDG_CONFIG_HOME:-$HOME/.config}/zsh
