Add `XDG_DEV_HOME` and `XDG_TMP_HOME` to the env
This commit adds two custom directories to the user's systemd
environment as `XDG_DEV_HOME` (`~/.local/dev/`) and `XDG_TMP_HOME`
(`~/.cache/tmp/`).

--- a/.config/environment.d/00-default.conf
+++ b/.config/environment.d/00-default.conf
@@ -17,5 +17,9 @@ XDG_BIN_HOME=${XDG_BIN_HOME:-$HOME/.local/bin}
 # This variable is not set by default but is defined in the XDG specification.
 XDG_STATE_HOME=${XDG_STATE_HOME:-$HOME/.local/state}
 
+# Custom extended XDG Base Directory specification
+XDG_DEV_HOME=$HOME/.local/dev
+XDG_TMP_HOME=$HOME/.cache/tmp
+
 # Point `ZDOTDIR` to custom configs under `XDG_CONFIG_HOME` before shell login
 ZDOTDIR=${XDG_CONFIG_HOME:-$HOME/.config}/zsh
