--- a/.config/byobu/.tmux.conf
+++ b/.config/byobu/.tmux.conf
@@ -1,4 +1,46 @@
 # Custom tmux configuration
+# https://github.com/tmux/tmux/wiki/Getting-Started
+
+# TODO: deprecate byobu (port keybindings or get used to tmux defaults)
+# TODO: config for remote servers (see e.g. jonhoo/configs)
+
+# Modern colors
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",alacritty:Tc"
+
+# Unbind the prefix and bind it to Ctrl-a like screen
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
+# TODO: update to wayland if possible (use wl-copy)
+## Copy to X clipboard
+#bind -T copy-mode-vi v send -X begin-selection
+#bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard &> /dev/null'
+#bind -T copy-mode-vi Enter send-keys -X cancel
+#
+## Shortcut for moving tmux buffer to clipboard
+## (useful if you've selected with the mouse)
+#bind-key -nr C-y run "tmux show-buffer | xclip -in -selection clipboard &> /dev/null"
+
+# Avoid ESC delay
+set -s escape-time 0
+
+# Fix titlebar
+set -g set-titles on
+set -g set-titles-string "#T"
+
+# VIM mode
+set -g mode-keys vi
+
+# Mouse friendly
+set -g mouse on
+
+# Move between panes with vi keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # Propagate focus events to make (Neo)Vim autoread working inside tmux
 # See: https://vi.stackexchange.com/questions/444/how-do-i-reload-the-current-file
@@ -7,3 +49,8 @@ set -g focus-events on
 # Enables ANSI pass through
 # See: https://github.com/tinted-theming/tinted-shell/blob/main/USAGE.md#tmux
 set -g allow-passthrough on
+
+# TODO: maybe simplify the UI
+# Avoid date/time taking up space
+#set -g status-right ''
+#set -g status-right-length 0
