--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,7 +1,7 @@
 # https://alacritty.org/config-alacritty.html
 
+[general]
 import = ["~/.config/alacritty/colors.toml"]
-
 live_config_reload = true
 
 [colors]
