Disable `mouse on` in tmux
I'm not quite sold to this options. On one hand it's good, but having
the visual selection stay (instead of the auto-copy and clear) feels
better.

--- a/.config/byobu/.tmux.conf
+++ b/.config/byobu/.tmux.conf
@@ -34,7 +34,7 @@ set -g set-titles-string "#T"
 set -g mode-keys vi
 
 # Mouse friendly
-set -g mouse on
+#set -g mouse on
 
 # Move between panes with vi keys
 bind h select-pane -L
