Start tmux windows and panes from 1
This commit changes the default numbering of `tmux` windows and panes
so that they start from 1 instead of 0. The rationale here is that 0 is
on the other side of the keyboard and thus makes window/pane switching
awkward.

--- a/.config/byobu/.tmux.conf
+++ b/.config/byobu/.tmux.conf
@@ -36,6 +36,10 @@ set -g mode-keys vi
 # Mouse friendly
 #set -g mouse on
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -gw pane-base-index 1
+
 # Move between panes with vi keys
 bind h select-pane -L
 bind j select-pane -D
