--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -14,6 +14,9 @@ bind C-a send-prefix
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",alacritty:Tc"
 
+# Enable support for OSC 8 hyperlinks
+set -ga terminal-features "*:hyperlinks"
+
 # TODO: update to wayland if possible (use wl-copy)
 ## Copy to X clipboard
 #bind -T copy-mode-vi v send -X begin-selection
