Maintain sequential window numbers in tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -50,6 +50,9 @@ set -g mode-keys vi
 set -g base-index 1
 set -gw pane-base-index 1
 
+# Maintain sequential window numbers
+set -g renumber-windows on
+
 # Propagate focus events to make (Neo)Vim autoread working inside tmux
 # See: https://vi.stackexchange.com/questions/444/how-do-i-reload-the-current-file
 set -g focus-events on
