--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -28,7 +28,8 @@ set -ga terminal-features "*:hyperlinks"
 #bind-key -nr C-y run "tmux show-buffer | xclip -in -selection clipboard &> /dev/null"
 
 # Avoid ESC delay
-set -s escape-time 0
+# Not 0 so we still parse ESCs
+set -gs escape-time 10
 
 # Increase scrollback buffer size from 2000 to 50000 lines
 set -g history-limit 50000
