Add new key bindings for Alacritty
Adds `<S-h>` and `<S-l>` bindings in Vi mode to move the cursor to the
_first_ and _last_ character respectively.

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -30,6 +30,18 @@ style = "Regular"
 action = "ToggleFullscreen"
 key = "F11"
 
+[[keyboard.bindings]]
+mode = "Vi"
+action = "First"
+mods = "Shift"
+key = "h"
+
+[[keyboard.bindings]]
+mode = "Vi"
+action = "Last"
+mods = "Shift"
+key = "l"
+
 [scrolling]
 history = 0
 
