Update git stash aliases
Specifically, this changes `git ss` and `git sa` to take a stash index
as an argument. Additionally, it adds an alias for `git stash drop`.

--- a/.config/git/config
+++ b/.config/git/config
@@ -62,8 +62,9 @@
 	ri = rebase -i --autosquash
 	fu = "!git commit --fixup=${1:-$(git rev-parse HEAD)} && GIT_EDITOR=true git rebase -i --autosquash ${1:-$(git rev-parse HEAD~2)}~1"
 	# https://stackoverflow.com/a/11688523/472927
-	ss = "!f() { git stash show stash^{/$*} -p; }; f"
-	sa = "!f() { git stash apply stash^{/$*}; }; f"
+	ss = "!f() { git stash show stash@{$*} -p; }; f"
+	sa = "!f() { git stash apply stash@{$*}; }; f"
+	sd = "!f() { git stash drop stash@{$*}; }; f"
 	sl = stash list
 	ah = "!f() { git stash && git pull --rebase && git stash pop; }; f"
 	# https://github.com/o2sh/onefetch/wiki/getting-started
